--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit.version>5.3.1</junit.version>
         <jacoco.version>0.8.2</jacoco.version>
+        <sonar.projectKey>maven-demo-project</sonar.projectKey>
+        <sonar.organization>itrainphoenix</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.login>4b8683b7b7419fd539cd1a8bbd6e7a522b42f71b</sonar.login>     
     </properties>
 
     <dependencies>
